--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@
 *.~505e7b7 filter=lfs diff=lfs merge=lfs -text
 *.qgz filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
+/wpi-logo filter=lfs diff=lfs merge=lfs -text
