--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@
 *.qgz filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
 /wpi-logo filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
